@@ -16,6 +16,7 @@ Cacti CHANGELOG
 -bug#0001143: "U" not allowed as min/max rrd value
 -bug#0001158: Deleted users cause a PHP error in the user auth log page
 -bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
+-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
 -bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
 -feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
